--- a/christen-zijn.html
+++ b/christen-zijn.html
@@ -25,7 +25,7 @@
 					"@type": "WebPage",
 					"@id": "https://onlinegeloven.nl/christen-zijn.html"
 				},
-				"headline": "Christen-zijn"
+				"headline": "Christen-zijn",
 				"image": [
 					"https://onlinegeloven.nl/img/christen-zijn-persoonlijk.webp",
 					"https://onlinegeloven.nl/img/samen.webp"
