--- a/geloven.html
+++ b/geloven.html
@@ -31,7 +31,7 @@
 				"@type": "WebPage",
 				"@id": "https://onlinegeloven.nl/geloven.html"
 			},
-			"headline": "Geloven"
+			"headline": "Geloven",
 			"image": [
 				"https://onlinegeloven.nl/img/leegte.webp",
 				"https://onlinegeloven.nl/img/god-leren-kennen.webp",
