--- a/geloven.html
+++ b/geloven.html
@@ -99,36 +99,13 @@
 							<a href='https://www.debijbel.nl/link/OpV3vkqL' target='_blank'><cite>Handelingen 2:38, de Bijbel</cite></a>
 						</p>
 					</div>
-					<picture>
-						<source type="image/webp"
-							srcset="img/god-leren-kennen-w294.webp 294w, img/god-leren-kennen-w588.webp 588w, img/god-leren-kennen-w1176.webp 1176w" 
-							sizes="(min-width: 980px) and (min-device-pixel-ratio: 1.3) 1176px, (min-width: 980px) 468px, 50vw"
-						/>
-						<source 
-							type="image/jpg" 
-							srcset="img/god-leren-kennen-w294.jpg 294w, img/god-leren-kennen-w588.jpg 588w, img/god-leren-kennen-w1176.jpg 1176w" 
-							sizes="(min-width: 980px) and (min-device-pixel-ratio: 1.3) 1176px, (min-width: 980px) 468px, 50vw"
-						/>
-						<img src="img/god-leren-kennen-w294.jpg" alt="ik strek mij uit naar meer"/>
-					</picture>
+					<img src="img/god-leren-kennen-.jpg" alt="ik strek mij uit naar meer"/>
 				</div>
 			</section>
 			<section id='wie-is-god' class="achtergrond">
 				<h2>Wie is God? </h2>
 				<div class="flex">
-					<picture>
-						<source 
-							type="image/webp" 
-							srcset="img/wie-is-god-w1176.webp 1176w, img/wie-is-god-w588.webp 588w, img/wie-is-god-w294.webp 294w" 
-							sizes="(min-width: 980px) and (min-device-pixel-ratio: 1.3) 1176px, (min-width: 980px) 468px, 50vw"
-						/>
-						<source 
-							type="image/jpeg" 
-							srcset="img/wie-is-god-w1176.jpg 1176w, img/wie-is-god-w588.jpg 588w, img/wie-is-god-w294.jpg 294w" 
-							sizes="(min-width: 980px) and (min-device-pixel-ratio: 1.3) 1176px, (min-width: 980px) 468px, 50vw"
-						/>
-						<img src="img/wie-is-god-w294.jpg" alt="licht van boven in een donkere omgeving"/>
-					</picture>
+					<img src="img/wie-is-god.jpg" alt="licht van boven in een donkere omgeving"/>
 					<div>
 						<p>In de geschiedenis heeft God steeds contact gezocht met mensen, zodat ze hem konden leren kennen. God is aan de ene kant de God die heel dichtbij wil zijn en aan de andere kant is hij de machtige God die de aarde en het universum gemaakt heeft.</p>
 						<p>In de Bijbel wordt er gesproken over één God, maar tegelijkertijd over drie personen: Vader, Zoon en Heilige Geest. God de Vader heeft de aarde gemaakt. Jezus de Zoon werd geboren op aarde om het perfecte leven te leven en daarna voor onze zonden te betalen door te sterven aan het kruis. De Heilige Geest is de God die in het hart van gelovigen woont en vrede geeft. Al in het eerste Bijbelboek is te lezen dat God uit meerdere personen bestaat. In <a href='https://www.nbv.nl/vertaalaantekeningen/?cid=text.Gen.sec_1' target='_blank'><cite>Genesis 1:26</cite></a> staat: <q>God zei: 'Laten wij mensen maken die ons evenbeeld zijn, die op ons lijken.'</q></p>
