--- a/index.html
+++ b/index.html
@@ -130,60 +130,9 @@
 			<section id="geloven">
 				<h2>Geloven</h2>
 				<div>
-					<div>
-						<a href="/geloven#god-leren-kennen">
-							<picture>
-								<source 
-									type="image/webp" 
-									srcset="img/god-leren-kennen-w1176.webp 1176w, img/god-leren-kennen-w588.webp 588w, img/god-leren-kennen-w294.webp 294w" 
-									sizes="(min-width: 980px) and (min-device-pixel-ratio: 2.1) 1176px, (min-width: 980px) and (min-device-pixel-ratio: 1.1) 588px, (min-width: 980px) 294px, 30vw"
-								/>
-								<source 
-									type="image/jpeg" 
-									srcset="img/god-leren-kennen-w1176.jpg 1176w, img/god-leren-kennen-w558.jpg 558w, img/god-leren-kennen-w294.jpg 294w" 
-									sizes="(min-width: 980px) and (min-device-pixel-ratio: 2.1) 1176px, (min-width: 980px) and (min-device-pixel-ratio: 1.1) 588px, (min-width: 980px) 294px, 30vw"
-								/>
-								<img src="img/god-leren-kennen-w294.jpg" alt="god leren kennen" />
-							</picture>
-							<p>Hoe kan ik God leren kennen?</p>
-						</a>
-					</div>
-					<div>
-						<a href="/geloven#wie-is-god">
-							<picture>
-								<source 
-									type="image/webp" 
-									srcset="img/wie-is-god-w1176.webp 1176w, img/wie-is-god-w558.webp 558w, img/wie-is-god-w294.webp 294w" 
-									sizes="(min-width: 980px) and (min-device-pixel-ratio: 2.1) 1176px, (min-width: 980px) and (min-device-pixel-ratio: 1.1) 588px, (min-width: 980px) 294px, 30vw"
-								/>
-								<source 
-									type="image/jpeg" 
-									srcset="img/wie-is-god-w1176.jpg 1176w, img/wie-is-god-w558.jpg 558w, img/wie-is-god-w294.jpg 294w" 
-									sizes="(min-width: 980px) and (min-device-pixel-ratio: 2.1) 1176px, (min-width: 980px) and (min-device-pixel-ratio: 1.1) 588px, (min-width: 980px) 294px, 30vw"
-								/>
-								<img src="img/wie-is-god-w294.jpg" alt="wie is god" />
-							</picture>
-							<p>Wie is God?</p>
-						</a>
-					</div>
-					<div>
-						<a href="/geloven#bijbel">
-							<picture>
-								<source 
-									type="image/webp" 
-									srcset="img/bijbel-w1176.webp 1176w, img/bijbel-w558.webp 558w, img/bijbel-w294.webp 294w" 
-									sizes="(min-width: 980px) and (min-device-pixel-ratio: 2.1) 1176px, (min-width: 980px) and (min-device-pixel-ratio: 1.1) 588px, (min-width: 980px) 294px, 30vw"
-								/>
-								<source 
-									type="image/jpeg"
-									srcset="img/bijbel-w1176.jpg 1176w, img/bijbel-w558.jpg 558w, img/bijbel-w294.jpg 294w" 
-									sizes="(min-width: 980px) and (min-device-pixel-ratio: 2.1) 1176px, (min-width: 980px) and (min-device-pixel-ratio: 1.1) 588px, (min-width: 980px) 294px, 30vw"
-								/>
-								<img src="img/bijbel-w294.jpg" alt="bijbel" />
-							</picture>
-							<p>Hoe lees ik de Bijbel?</p>
-						</a>
-					</div>
+					<div><a href="/geloven#god-leren-kennen"><img src="img/god-leren-kennen.jpg" alt="god leren kennen" /><p>Hoe kan ik God leren kennen?</p></a></div>
+					<div><a href="/geloven#wie-is-god"><img src="img/wie-is-god.jpg" alt="wie is god" /><p>Wie is God?</p></a></div>
+					<div><a href="/geloven#bijbel"><img src="img/bijbel.jpg" alt="bijbel" /><p>Hoe lees ik de Bijbel?</p></a></div>
 				</div>
 			</section>
 		</main>
