Change header message

--- a/index.html
+++ b/index.html
@@ -113,8 +113,8 @@
 		<header>
 			<div>
 				<h1>ONLINEGELOVEN.NL</h1>
-				<p>Sta je open voor het christelijk geloof en wil je met anderen zoeken naar de betekenis hiervan in het dagelijks leven? Meld je dan aan voor de online bijeenkomst zondag 15:00 waarin we elkaar en God beter willen leren kennen.</p>
-				<a class="button" href="https://tawk.to/chat/5e805f0169e9320caabe1b82/1e6mcvltq" target="_blank">Ik doe mee!</a>
+				<p>Sta je open voor het christelijk geloof en wil je met anderen zoeken naar de betekenis hiervan in het dagelijks leven? Laat het weten als je hierover in gesprek wilt.</p>
+				<a class="button" href="https://tawk.to/chat/5e805f0169e9320caabe1b82/1e6mcvltq" target="_blank">Stuur bericht!</a>
 			</div>
 		</header>
 
