--- a/christen-zijn.html
+++ b/christen-zijn.html
@@ -41,6 +41,24 @@
 				.flex-25 {flex: 25%; padding: 1em;}
 				.flex-75 {flex: 75%;}	
 			</style>
+
+			<!-- Matomo -->
+			<script type="text/javascript">
+				var _paq = window._paq = window._paq || [];
+				/* tracker methods like "setCustomDimension" should be called before "trackPageView" */
+				_paq.push(['trackPageView']);
+				_paq.push(['enableLinkTracking']);
+				(function() {
+					var u="//analytics.onlinegeloven.nl/";
+					_paq.push(['setTrackerUrl', u+'matomo.php']);
+					_paq.push(['setSiteId', '5']);
+					var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0];
+					g.type='text/javascript'; g.async=true; g.src=u+'matomo.js'; s.parentNode.insertBefore(g,s);
+				})();
+			</script>
+			<noscript><p><img src="//analytics.onlinegeloven.nl/matomo.php?idsite=5&amp;rec=1&amp;url=https%3A%2F%2Fonlinegeloven.nl%2Fchristen-zijn" style="border:0;" alt="" /></p></noscript>
+			<!-- End Matomo Code -->
+
 	</head>
 
 	<body>
