--- a/geloven.html
+++ b/geloven.html
@@ -44,6 +44,24 @@
 			]
 		}
 		</script>
+
+		<!-- Matomo -->
+		<script type="text/javascript">
+			var _paq = window._paq = window._paq || [];
+			/* tracker methods like "setCustomDimension" should be called before "trackPageView" */
+			_paq.push(['trackPageView']);
+			_paq.push(['enableLinkTracking']);
+			(function() {
+				var u="//analytics.onlinegeloven.nl/";
+				_paq.push(['setTrackerUrl', u+'matomo.php']);
+				_paq.push(['setSiteId', '5']);
+				var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0];
+				g.type='text/javascript'; g.async=true; g.src=u+'matomo.js'; s.parentNode.insertBefore(g,s);
+			})();
+		</script>
+		<noscript><p><img src="//analytics.onlinegeloven.nl/matomo.php?idsite=5&amp;rec=1&amp;url=https%3A%2F%2Fonlinegeloven.nl%2Fgeloven" style="border:0;" alt="" /></p></noscript>
+		<!-- End Matomo Code -->
+
 	</head>
 
 	<body>
